Updated index.html content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procelligence - Model-Based Biotech Solutions</title>
+    <title>Procelligence - Model-Based Biotech and Bio/Pharma Solutions</title>
     <link rel="stylesheet" href="style.css">
     <!-- AOS Animation Library -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <h1>Intelligent Solutions for Biotech Innovation</h1>
+        <h1>Intelligent Solutions for Biotech and Bio/Pharma Innovation</h1>
         <p>Driving model-based breakthroughs in biotechnology.</p>
         <a href="#services" class="btn">Our Services</a>
     </section>
@@ -34,7 +34,7 @@
     <!-- About Preview -->
     <section id="about" class="about" data-aos="fade-up">
         <h2>About Procelligence</h2>
-        <p>At Procelligence, we combine data-driven modeling and biotech expertise to accelerate innovation.</p>
+        <p>At Procelligence, we combine hybrid (mechanistic and data-driven) modeling and biotech and bio/pharma expertise to accelerate innovation.</p>
         <a href="#about" class="btn">Learn More</a>
     </section>
 
@@ -44,20 +44,20 @@
         <div class="service-cards">
             <div class="card">Model-Based Process Design</div>
             <div class="card">AI-Enhanced Drug Development</div>
-            <div class="card">Biotech Digital Twins</div>
+            <div class="card">Biotech and Bio/Pharma Digital Twins</div>
         </div>
     </section>
 
     <!-- Blog Preview -->
     <section id="blog" class="blog" data-aos="fade-right">
         <h2>Latest Insights</h2>
-        <p>Stay tuned for thought leadership in biotech and modeling!</p>
+        <p>Stay tuned for thought leadership in model-informed development biotech and bio/pharma!</p>
     </section>
 
     <!-- Contact CTA -->
     <section id="contact" class="contact" data-aos="fade-left">
         <h2>Contact Us</h2>
-        <p>Let's discuss how we can help your biotech journey.</p>
+        <p>Let's discuss how we can help your biotech and bio/pharma journey.</p>
         <a href="mailto:info@procelligence.com" class="btn">Get in Touch</a>
     </section>
 
